@@ -1,5 +1,11 @@
 2005-01-28  Andrew Cagney  <cagney@gnu.org>
 
+	* m2-valprint.c: Include "c-lang.h".
+	(c_val_print): Delete extern declaration.
+	* scm-valprint.c: Include "c-lang.h".
+	(c_val_print): Delete extern declaration.
+	Makefile.in: Update dependencies.
+
 	* gnu-v2-abi.h (gnuv2_baseclass_offset): Make "valaddr" a const
 	bfd_byte.
 	* cp-abi.h (baseclass_offset): Make "valaddr" a const bfd_byte.
